Complete swagger documentation
