# swagger.yaml
@@ -2,10 +2,20 @@ basePath: /
 consumes:
 - application/json
 definitions:
+  GenericError:
+    description: GenericError is a generic error message returned by a server
+    properties:
+      message:
+        type: string
+        x-go-name: Message
+    type: object
+    x-go-package: github.com/davizuku/go-microservices/internal/handlers
   Product:
     description: Product defines the structure for an API product
     properties:
       description:
+        description: The description of the product
+        maxLength: 1000
         type: string
         x-go-name: Description
       id:
@@ -15,19 +25,40 @@ definitions:
         type: integer
         x-go-name: ID
       name:
+        description: The name for this product
+        minLength: 1
         type: string
         x-go-name: Name
       price:
+        description: The price of the product
         format: float
+        maximum: 10
+        minimum: 0.01
         type: number
         x-go-name: Price
       sku:
+        description: the unique stock keeping unit (SKU) of the product
+        example: abc-123-b4d
+        pattern: '[a-z0-9]+\-[a-z0-9]+\-[a-z0-9]+'
         type: string
         x-go-name: SKU
     required:
     - id
+    - name
+    - price
+    - sku
     type: object
     x-go-package: github.com/davizuku/go-microservices/internal/data
+  ValidationError:
+    description: ValidationError is a collection of validation error messages
+    properties:
+      messages:
+        items:
+          type: string
+        type: array
+        x-go-name: Messages
+    type: object
+    x-go-package: github.com/davizuku/go-microservices/internal/handlers
 info:
   description: Documentation for Product API
   title: Product API
@@ -40,6 +71,27 @@ paths:
       responses:
         "200":
           $ref: '#/responses/productsResponse'
+      tags:
+      - products
+    post:
+      description: Create a new product
+      operationId: create
+      parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+        "501":
+          $ref: '#/responses/errorResponse'
       tags:
       - products
   /products/{id}:
@@ -55,13 +107,48 @@ paths:
         type: integer
       responses:
         "201":
-          $ref: '#/responses/noContent'
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    put:
+      description: Update a products details
+      operationId: updateProduct
+      parameters:
+      - description: The id of the product to delete from the data store
+        format: int64
+        in: path
+        name: ID
+        required: true
+        type: integer
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
       tags:
       - products
 produces:
 - application/json
 responses:
-  noContent: {}
+  errorResponse:
+    description: Generic error message returned as a string
+    schema:
+      $ref: '#/definitions/GenericError'
+  errorValidation:
+    description: Validation errors defined as an array of strings
+    schema:
+      $ref: '#/definitions/ValidationError'
+  noContentResponse: {}
+  productResponse:
+    description: A single product returned in the response
+    schema:
+      $ref: '#/definitions/Product'
   productsResponse:
     description: A list of products returns in the response
     schema:
